// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Favorites component should mount with appropriate color of favorite icon and should mount without crashing when a user is not signed in 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Favorites
    authUser={null}
    hasFavorited={true}
    recipeId={1}
    toggleFavorite={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "authUser": null,
      "hasFavorited": true,
      "recipeId": 1,
      "toggleFavorite": [MockFunction],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": <i
          aria-hidden="true"
          class="fa fa-heart click-add grey"
          id="favorite-button"
        />,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "aria-hidden": "true",
          "className": "fa fa-heart click-add grey",
          "id": "favorite-button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          undefined,
        ],
        "type": "i",
      },
      " ",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "authUser": null,
        "hasFavorited": true,
        "recipeId": 1,
        "toggleFavorite": [MockFunction],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": <i
            aria-hidden="true"
            class="fa fa-heart click-add grey"
            id="favorite-button"
          />,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "aria-hidden": "true",
            "className": "fa fa-heart click-add grey",
            "id": "favorite-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            undefined,
          ],
          "type": "i",
        },
        " ",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`The Favorites component should mount with appropriate color of favorite icon and should mount without crashing when a user is signed in 1`] = `
ReactWrapper {
  "length": 1,
  Symbol(enzyme.__unrendered__): <Favorites
    authUser={
      Object {
        "user": Object {
          "aboutMe": "about nene",
          "email": "nene.rae@test.com",
          "id": 1,
          "name": "rachel",
          "profilePicture": "http://lorem.pixel.png",
          "username": "nene",
        },
      }
    }
    hasFavorited={true}
    recipeId={1}
    toggleFavorite={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "authUser": Object {
        "user": Object {
          "aboutMe": "about nene",
          "email": "nene.rae@test.com",
          "id": 1,
          "name": "rachel",
          "profilePicture": "http://lorem.pixel.png",
          "username": "nene",
        },
      },
      "hasFavorited": true,
      "recipeId": 1,
      "toggleFavorite": [MockFunction],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": <i
          aria-hidden="true"
          class="fa fa-heart click-add orange"
          id="favorite-button"
        />,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "aria-hidden": "true",
          "className": "fa fa-heart click-add orange",
          "id": "favorite-button",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": Array [
          undefined,
        ],
        "type": "i",
      },
      " ",
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "authUser": Object {
          "user": Object {
            "aboutMe": "about nene",
            "email": "nene.rae@test.com",
            "id": 1,
            "name": "rachel",
            "profilePicture": "http://lorem.pixel.png",
            "username": "nene",
          },
        },
        "hasFavorited": true,
        "recipeId": 1,
        "toggleFavorite": [MockFunction],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": <i
            aria-hidden="true"
            class="fa fa-heart click-add orange"
            id="favorite-button"
          />,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "aria-hidden": "true",
            "className": "fa fa-heart click-add orange",
            "id": "favorite-button",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": Array [
            undefined,
          ],
          "type": "i",
        },
        " ",
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
